# rust-embedded-workshop

./: Cargo.toml  README.md
.cargo/: config.toml
cyw43-firmware/: README.md
src/: bmp280.rs  color.rs  hello.rs  lib.rs  smart_clock.rs  smart_home.rs
src/display/: mod.rs
