[package]
name = "embedded-nov-2024"
version = "0.1.0"
edition = "2021"
description = "Embedded Rust Workshop, November 2024."
license-file = "LICENSE"

[dependencies]
embassy-embedded-hal = {version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git"}
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy.git"}
embassy-executor = { version = "0.6.2", git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-40960"] }
embassy-time ={version = "0.3.2", git = "https://github.com/embassy-rs/embassy.git"}

embassy-rp = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = ["time-driver", "critical-section-impl", "rp2040"] }

embassy-usb = {version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git"}
embassy-net = { version = "0.4.0",git = "https://github.com/embassy-rs/embassy.git", features = ["proto-ipv4", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-futures = {version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git"}
embassy-usb-logger = {version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git"}

cyw43-pio = {version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git"}
cyw43 = {version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git"}

# for web request example
reqwless = { version = "0.13.0", features = ["defmt"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

log = "0.4"

embedded-io-async = "0.6.1"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

static_cell = { version = "2.1", features = ["nightly"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
eeprom24x = "0.7.0"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "color"
path = "src/color.rs"

[[bin]]
name = "smart_clock"
path = "src/smart_clock.rs"

